--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nano33ble]
-platform = nordicnrf52
-board = nano33ble
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328new
 framework = arduino
